[package]
name = "vercel_blob"
version = "0.1.0"
edition = "2021"
authors = ["Lance Devs <dev@eto.ai>"]
description = "A rust client for the Vercel Blob Storage API"
license = "Apache-2.0"
repository = "https://github.com/lancedb/lance"
readme = "README.md"

[dependencies]
async-trait = "0.1.73"
bytes = "1.4.0"
chrono = { version = "0.4.26", features = ["serde"] }
once_cell = "1.18.0"
reqwest = { version = "0.11.20", features = ["json"] }
serde = { version = "1.0.186", features = ["derive"] }
thiserror = "1.0.47"

[dev-dependencies]
all_asserts = "2.3.1"
futures = "0.3.28"
mockito = "1.1.0"
serde_json = "1.0.105"
serial_test = "2.0.0"
tokio = { version = "1.32.0", features = ["test-util", "macros"] }
